@@ -1,4 +1,4 @@
 requires 'Catmandu', '0.9';
 requires 'RDF::Trine', '1.0';
 requires 'RDF::NS', '20140910';
-requires 'RDF::aREF', '0.18';
+requires 'RDF::aREF', '0.22';
