@@ -11,12 +11,11 @@ isa_ok $pkg->new, $pkg;
 my $aref = importer('YAML', file => 't/example.yml')->first;
 my $expect = {
     'http://example.org' => {
-        a => [ '<http://www.w3.org/2000/01/rdf-schema#Resource>' ],
-        'http://example.org/foo' => [ "b\x{e4}r\@en" ],
-        'http://purl.org/dc/elements/1.1/title' => [ "B\x{c4}R@" ],
-        'http://purl.org/dc/elements/1.1/extent' => [ 
-            '42^<http://www.w3.org/2001/XMLSchema#integer>' 
-        ],
+        a => '<http://www.w3.org/2000/01/rdf-schema#Resource>',
+        'http://example.org/foo' => "b\x{e4}r\@en",
+        'http://purl.org/dc/elements/1.1/title' => "B\x{c4}R@",
+        'http://purl.org/dc/elements/1.1/extent' => 
+            '42^<http://www.w3.org/2001/XMLSchema#integer>',
      }
 };
 
@@ -34,11 +33,11 @@ foreach my $file (qw(t/example.ttl t/example.rdf)) {
     my $importer = importer('RDF', type => 'turtle', file => \$ttl);    
     my $aref = $importer->first;
     is_deeply $aref->{'http://example.org'}->{'http://example.org/foo'},
-        [ 'bär@en' ], 'import from scalar with Unicode';
+        'bär@en', 'import from scalar with Unicode';
 }
 
 {
-    my $importer = importer('RDF', file => 't/example.ttl', triples => 1);
+    my $importer = importer('RDF', file => 't/example.ttl', triples => 1, predicate_map => 1);
     my $aref = $importer->to_array;
     is_deeply [ 
         sort { 
