@@ -1,6 +1,7 @@
 Changelog for Catmandu-RDF
 
 {{$NEXT}}
+  - align with RDF::aREF 0.22, new options predicate_map
 
 0.20  2014-12-10 15:13:40 CET
   - tried to fix import from URL encoding (issue #9)
